better logs better timer

--- a/simta.conf
+++ b/simta.conf
@@ -289,7 +289,7 @@
 # attempts to write before reading the banner, it is punished with the banner
 # being delayed by DELAY_SECONDS.
 #
-#WRITE_BEFORE_BANNER		WAIT_SECONDS		DELAY_SECONDS
+#WRITE_BEFORE_BANNER		WAIT_SECONDS		[ DELAY_SECONDS ]
 
 # Enable low-pref MX message acceptance for the designated domain.
 #
