document filter changes

--- a/simta.conf
+++ b/simta.conf
@@ -151,6 +151,8 @@
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
 # SIMTA_UID - The Message's UID as defined by simta
+# SIMTA_PID - calling process's PID
+# SIMTA_CID - calling process's Connection ID (SIMTA_PID.SIMTA_CID for logging)
 # SIMTA_WRITE_BEFORE_BANNER - The SMTP client wrote before the SMTP banner
 # SIMTA_AUTH_ID - who was authenticated, if anyone
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
