SMTP timers added

--- a/simta.conf
+++ b/simta.conf
@@ -64,17 +64,33 @@
 #
 #BASE_DIR			/var/spool/simta
 
+# The amount of time the SMTP server allows for the entire session.
+# 0 is unlimited.
+#
+#RECEIVE_SESSION_WAIT		0
+
 # The amount of time the SMTP server waits for client command.
 #
-#RECEIVE_WAIT			600
+#RECEIVE_LINE_WAIT		600
+
+# The amount of time the SMTP server waits for the entire data transaction.
+# 0 is unlimited.
+#
+#DATA_SESSION_WAIT		3600
 
 # The amount of time the SMTP server waits for a SMTP DATA line
 #
 #DATA_LINE_WAIT			300
 
-# The amount of time the SMTP server waits for the entire data transaction.
+# The amount of time the SMTP server waits for a valid "mail from", "rcpt to",
+# or "data" command before hanging up.  0 is unlimited.
 #
-#DATA_SESSION_WAIT		3600
+#SMTP_INACTIVITY_TIMER		0
+
+# The amount of time the SMTP server waits before it sends an accepted
+# message.  0 is immediate.  This option is disabled by default.
+#
+#SMTP_DELIVERY_TIMER		0
 
 # Path to the default local mailer, and arguments.  This overrides configure.
 #
