Jail bugfix CF Bounce added

--- a/simta.conf
+++ b/simta.conf
@@ -192,6 +192,7 @@
 # 0x0000 1000	MESSAGE_DISCONNECT
 # 0x0001 0000	MESSAGE_TARPIT
 # 0x0010 0000	MESSAGE_JAIL
+# 0x0100 0000	MESSAGE_BOUNCE
 #
 # Note that if the content filter suffers an internal system error, it will
 # return MESSAGE_TEMPFAIL.
