global connection throttling

--- a/simta.conf
+++ b/simta.conf
@@ -116,18 +116,23 @@
 #
 #BOUNCE_SECONDS			259200
 
-# The maximum number of incoming SMTP connections allowed.
+# These variables can place limits on the global number of connections
+# clients can have open to the SMTP server.  Connections can be limited by a
+# maximum total, or throttled by the number allowed to be opened in a given
+# time interval, in seconds.
 #
-#MAX_RECEIVE_CONNECTIONS	100
+#MAX_RECEIVE_CONNECTIONS			100
+#MAX_RECEIVE_THROTTLE_CONNECTIONS		0
+#RECEIVE_THROTTLE_SECONDS			1
 
 # These variables can place limits on the number of connections an individual
 # host can have open to the SMTP server.  Connections can be limited by a
-# maximum total, or number allowed to be opened in a given time interval, in
-# seconds.  0 for either value indicated no limit.
+# maximum total, or throttled by the number allowed to be opened in a given
+# time interval, in seconds.  0 for either value indicated no limit.
 #
-#RECEIVE_CONNECTIONS_PER_HOST   	0
-#RECEIVE_CONNECTIONS_PER_INTERVAL   	0
-#RECEIVE_CONNECTION_INTERVAL_TIME	1
+#MAX_RECEIVE_CONNECTIONS_PER_HOST   		0
+#MAX_RECEIVE_THROTTLE_CONNECTIONS_PER_HOST	0
+#RECEIVE_THROTTLE_SECONDS_PER_HOST		1
 
 # The maximum number of headers allowed on any incoming SMTP message.
 #
