--- a/simta.conf
+++ b/simta.conf
@@ -228,11 +228,15 @@
 # Enable RBL.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message to blocked connections.  If an address is found in a BLOCK
 # list, it is blocked, if it is found in an ACCEPT list, it will be accepted
-# and no further lookups will take place.  Order in the config file gives
-# precedence to the lookups.
+# and no further lookups will take place.  If it is found on a LOG_ONLY list,
+# and verbose logging is enabled, it will log that it was found, but continue
+# checking for a BLOCK or ACCEPT.
+#
+# Order in the config file gives precedence to the lookups.
 #
 #RBL_BLOCK			DOMAIN			URL
 #RBL_ACCEPT			DOMAIN
+#RBL_LOG_ONLY			DOMAIN
 
 # Enable verbose RBL logging.
 #
@@ -241,12 +245,17 @@
 # Enable user RBLs.  Domain is the RBL server, URL is a URL to give as a SMTP
 # error message to blocked connections.  If an address is found in a BLOCK
 # list, it is blocked, if it is found in an ACCEPT list, it will be accepted
-# and no further lookups will take place.  Order in the config file gives
-# precedence to the lookups.  Non-USER RBL actions take precedence over
-# USER lists.
+# and no further lookups will take place.  If it is found on a LOG_ONLY list,
+# and verbose logging is enabled, it will log that it was found, but continue
+# checking for a BLOCK or ACCEPT.
+#
+# Order in the config file gives precedence to the lookups.
+#
+# Non-USER RBL actions take precedence over USER lists.
 #
 #USER_RBL_BLOCK			DOMAIN			URL
 #USER_RBL_ACCEPT		DOMAIN
+#USER_RBL_LOG_ONLY		DOMAIN
 
 # Allow -f option with simsendmail.
 #
