DNS strings updated

--- a/simta.conf
+++ b/simta.conf
@@ -172,6 +172,11 @@
 # SIMTA_REMOTE_IP - IP address of remote host
 # SIMTA_REMOTE_HOSTNAME - given hostname of remote host
 # SIMTA_REVERSE_LOOKUP - DNS reverse lookup of remote host
+# -  REVERSE_MATCH		0
+# -  REVERSE_ERROR		1
+# -  REVERSE_UNKNOWN		2
+# -  REVERSE_MISMATCH		3
+# -  REVERSE_UNRESOLVED		4
 # SIMTA_SMTP_MAIL_FROM - message's From
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
