--- a/simta.conf
+++ b/simta.conf
@@ -15,6 +15,10 @@
 #
 #SMTP_MODE			NORMAL
 
+# disables sender checking when in global relay mode
+#
+# GLOBAL_RELAY_DISABLE_SENDER_CHECKING
+
 # TARPIT stage wait times.  The default time is waited before ecah banner
 # message while simta is in TARPIT mode.  If a stage wait
 #
