- disable from checking a global option now     - DELIVER_AFTER_ACCEPT gos away

--- a/simta.conf
+++ b/simta.conf
@@ -15,9 +15,9 @@
 #
 #SMTP_MODE			NORMAL
 
-# disables sender checking when in global relay mode
+# disables sender checking
 #
-# GLOBAL_RELAY_DISABLE_SENDER_CHECKING
+# DISABLE_SENDER_CHECKING
 
 # TARPIT stage wait times.  The default time is waited before ecah banner
 # message while simta is in TARPIT mode.  If a stage wait
@@ -63,10 +63,6 @@
 # a deliver attempt.
 #
 #QUEUE_INCOMING_SMTP_MAIL
-
-# Immediately attempt the delivery of a message accepted via SMTP.
-#
-#DELIVER_AFTER_ACCEPT
 
 # Designate a directory for simta's mail queues.
 #
