--- a/simta.conf
+++ b/simta.conf
@@ -154,6 +154,11 @@
 #
 #MAX_Q_RUNNERS_LAUNCH		10
 
+# How often a queue runner will be launched to deal with unexpanded messages,
+# if any.
+#
+#UNEXPANDED_TIME		60
+
 # The minimum amount of time the master queue runner will work between disk
 # reads, in seconds.
 #
