--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,7 @@ AC_STRUCT_GMTOFF
 AC_SUBST(SRC, [])
 AC_SUBST(SIMTA_OBJ, [])
 AC_SUBST(SIMSEND_OBJ, [])
+AC_SUBST(SIMC_OBJ, [])
 AC_SUBST(Q_RUNNER_OBJ, [])
 AC_SUBST(EXPANDER_OBJ, [])
 
