--- a/simta.conf
+++ b/simta.conf
@@ -154,6 +154,11 @@
 #
 #MAX_Q_RUNNERS_LAUNCH		10
 
+# How many entries to read every daemon loop.  Default is 10.  0 is unlimited.
+#
+#COMMAND_FACTOR			10
+#DISK_FACTOR			10
+
 # How often a queue runner will be launched to deal with unexpanded messages,
 # if any.
 #
