DEBUG_LOGGING added, better logging for problem messages

--- a/simta.conf
+++ b/simta.conf
@@ -235,6 +235,10 @@
 #
 #REVERSE_URL			URL
 
+# If this flag is set, extra logging is done for debugging purposes.
+#
+#DEBUG_LOGGING
+
 # If this flag is set, allow incoming connections despite DNS errors during
 # reverse lookup.
 #
@@ -350,6 +354,18 @@
 # Enable SASL.
 #
 #SASL_ON
+
+# Enable Sender simc command
+#
+#ENABLE_SENDER_LIST
+
+# Enable Message simc command
+#
+#ENABLE_MID_LIST
+
+# Mail Jail enable (don't do this unless you know what you're doing)
+#
+#MAIL_JAIL
 
 #
 # @domain RED (Receive Expand Deliver) rules
