work in progress

--- a/simta.conf
+++ b/simta.conf
@@ -367,6 +367,11 @@
 #
 #MAIL_JAIL
 
+# How many seconds we run a queue in JAIL mode for cleanout purposes.
+# Default it 4 hours.
+#
+#JAIL_SECONDS			14400
+
 #
 # @domain RED (Receive Expand Deliver) rules
 #
