lots of bugfixes

--- a/simta.conf
+++ b/simta.conf
@@ -367,6 +367,11 @@
 #
 #MAIL_JAIL
 
+# Local Jail enable (don't do this unless you know what you're doing)
+# Only works if MAIL_JAIL is turned on.
+#
+#LOCAL_JAIL
+
 # How many seconds we run a queue in JAIL mode for cleanout purposes.
 # Default it 4 hours.
 #
