more jail features/debugging

--- a/simta.conf
+++ b/simta.conf
@@ -112,7 +112,7 @@
 #BOUNCE_LINES			100
 
 # How many seconds we try to deliver a message before we bounce it.  Default
-# is a standard three days.
+# is a standard three days.  0 means never bounce.
 #
 #BOUNCE_SECONDS			259200
 
@@ -236,8 +236,11 @@
 #REVERSE_URL			URL
 
 # If this flag is set, extra logging is done for debugging purposes.
+# 0 is no additional logging
+# 1 is some additional logging
+# 2 is all additional logging
 #
-#DEBUG_LOGGING
+#DEBUG_LOGGING			0
 
 # If this flag is set, allow incoming connections despite DNS errors during
 # reverse lookup.
@@ -371,6 +374,11 @@
 # Only works if MAIL_JAIL is turned on.
 #
 #LOCAL_JAIL
+
+# Bounce Jail enable (don't do this unless you know what you're doing)
+# Only works if MAIL_JAIL is turned on.
+#
+#BOUNCE_JAIL
 
 # How many seconds we run a queue in JAIL mode for cleanout purposes.
 # Default it 4 hours.
