--- a/simta.conf
+++ b/simta.conf
@@ -68,33 +68,53 @@
 #
 #BASE_DIR			/var/spool/simta
 
-# The amount of time the SMTP server allows for the entire session.
-# 0 is unlimited.
+# SMTP RECEIVE & DELIVER TIMERS
+# All RECEIVE timers are for incoming SMTP requests where simta is acting as
+# a SMTP server.  All DELIVER timers are for when simta is attempting to
+# deliver mail to an external SMTP server, and simta is acting as a SMTP
+# client.
 #
-#RECEIVE_SESSION_WAIT		0
-
-# The amount of time the SMTP server waits for client command.
+# This is the total number of seconds that simta will allow for any incoming
+# SMTP session.  0 means no timer, or infinity.
+#RECEIVE_GLOBAL_SESSION_TIMEOUT		0
 #
-#RECEIVE_LINE_WAIT		600
-
-# The amount of time the SMTP server waits for the entire data transaction.
-# 0 is unlimited.
+# This is the total number of seconds that simta waits for the client to
+# make progress during the SMTP transaction.  Progress is defined as getting
+# a positive response to any MAIL FROM, RCPT TO, or DATA command request.
+# During the DATA transaction, this timer has no effect.  0 means no timer,
+# or infinity.
+#RECEIVE_COMMAND_INACTIVITY_TIMEOUT  	3600
 #
-#DATA_SESSION_WAIT		3600
-
-# The amount of time the SMTP server waits for a SMTP DATA line
+# This is the total number of seconds that simta will wait for any command
+# during the SMTP session.
+#RECEIVE_COMMAND_LINE_TIMEOUT	  	300
 #
-#DATA_LINE_WAIT			300
-
-# The amount of time the SMTP server waits for a valid "mail from", "rcpt to",
-# or "data" command before hanging up.  0 is unlimited.
+# This is the total number of seconds that simta will wait for a line of data
+# during the SMTP session.
+#RECEIVE_DATA_LINE_TIMEOUT		300
 #
-#SMTP_INACTIVITY_TIMER		0
-
-# The amount of time the SMTP server waits before it sends an accepted
-# message.  0 is immediate.  This option is disabled by default.
+# This is the total number of seconds that simta will allow for any incoming
+# DATA session.
+#RECEIVE_DATA_SESSION_TIMEOUT	  	3600
 #
-#SMTP_DELIVERY_TIMER		0
+# This is the total number of seconds that simta will wait to deliver a
+# message that it accepts as a SMTP server.  While it's delivering, the
+# connection will block.  0 means to deliver the message immediately.
+# -1 disables the timer, and the message is sent only when the client quits
+# or tries to send another message.
+#RECEIVE_ACCEPTED_MESSAGE_TIMER		-1
+#
+# This is the total number of seconds that simta will wait for any outgoing
+# SMTP command to be acknowledged.
+#DELIVER_COMMAND_LINE_TIMEOUT	  	300
+#
+# This is the total number of seconds that simta will allow for any outgoing
+# DATA line.
+#DELIVER_DATA_LINE_TIMEOUT	  	300
+#
+# This is the total number of seconds that simta will allow for any outgoing
+# DATA session.  0 means no timer, or infinity.
+#DELIVER_DATA_SESSION_TIMEOUT	  	0
 
 # Path to the default local mailer, and arguments.  This overrides configure.
 #
