cleanup, also ignore libtool

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-*\.la
-*\.lo
-*\.o
+*.la
+*.lo
+*.o
 ,*
 Makefile
-\.libs
+.libs
 config.h
 config.log
 config.status
 dense
 errors
-lib*\.a
+lib*.a
+libtool
 q_runner
 simalias
 simexpander
