--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@
 .libs
 Makefile
 autom4te.cache
+config.guess
 config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 dense
 errors
