--- a/denser/configure.ac
+++ b/denser/configure.ac
@@ -25,5 +25,11 @@ AC_SUBST(resolv_conf_path)
 AC_CHECK_LIB([nsl], [inet_ntoa])
 AC_CHECK_LIB([socket], [socket])
 
+if test "x$srcdir" = x.; then
+extrasub="$extrasub
+/^srcdir=/d
+/^SRCPFX/d"
+fi
+
 AC_CONFIG_FILES(Makefile)
 AC_OUTPUT
