--- a/Makefile.in
+++ b/Makefile.in
@@ -218,6 +218,9 @@ stamp-denser :
 	cd denser; ${MAKE} ${MFLAGS} CC=${CC} INCPATH="${INCPATH}"
 	@touch stamp-denser
 
+denser/dense : stamp-denser
+	@true
+
 VERSION=`date +%Y_%m_%d`
 DISTDIR=simta-${VERSION}
 
