SEEN_BEFORE_DOMAIN configuration option

--- a/simta.conf
+++ b/simta.conf
@@ -49,6 +49,11 @@
 #
 #MASQUERADE			DOMAIN
 
+# Tag outgoing "seen-before" with this; ignore incoming "seen-before"
+# without this tag.
+#
+#SEEN_BEFORE_DOMAIN		DOMAIN
+
 # Designate a host to punt undeliverable mail to.
 #
 #PUNT				HOSTNAME
