Document the uniform per-queue option syntax

--- a/simta.conf
+++ b/simta.conf
@@ -437,9 +437,28 @@
 # @localhost RE ALIAS
 # @localhost RE PASSWORD
 
+#
+# Delivery rules
+#
+# @DOMAIN D KEYWORD [ args ]
+#
+# Disable punting for a domain
+#
+# @hostname     D       NO_PUNT
+#
+# Allow punting of all messages for a domain, even when the delivery failure
+# is to the jail host.
+#
+# @hostname     D       PUNT
+#
+# Modify the minimum and maximum queue wait times for a domain
+#
+# @hostname     D       QUEUE_WAIT MIN MAX
+# @hostname     D       QUEUE_WAIT 300 4800
+#
 # Call a defined binary for delivery of a domain's mail.
 # Special args: $S Sender, $R recipient, $D domain
 # Data of message will be on standard input.
 #
-# @hostname	D	/path/to/binary [ args ]
-# @hostname	D	/usr/bin/procmail -f $S -d $R
+# @hostname     D       MAILER /path/to/binary [ args ]
+# @hostname     D       MAILER /usr/bin/procmail -f $S -d $R
