Add more sophisticated BDB detection
Based on http://www.gnu.org/software/autoconf-archive/ax_path_bdb.html

--- a/configure.ac
+++ b/configure.ac
@@ -49,7 +49,18 @@ AC_SUBST(SIMC_OBJ, [])
 AC_SUBST(Q_RUNNER_OBJ, [])
 AC_SUBST(EXPANDER_OBJ, [])
 
-CHECK_DB
+AX_PATH_BDB([4],[
+    SIMTALIBS="$SIMTALIBS $BDB_LIBS"
+    SIMTALDFLAGS="$SIMTALDFLAGS $BDB_LDFLAGS"
+    SIMTACPPFLAGS="$SIMTACPPFLAGS $BDB_CPPFLAGS"
+    HAVE_DB=yes
+])
+
+AC_SUBST(SIMTALIBS)
+AC_SUBST(SIMTALDFLAGS)
+AC_SUBST(SIMTACPPFLAGS)
+AC_SUBST(HAVE_DB)
+
 CHECK_LDAP
 CHECK_LIBWRAP
 CHECK_SASL
